# agentic_track

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  llm_prompts.py  main.py
app/agent/: llm.py  orchestrator.py
app/agent_v2/: __init__.py  llm_adapter.py  models.py  orchestrator.py  prompts.py
app/api/: routes.py
app/core/: config.py
app/frontend/: app.js  index.html  styles.css
app/memory/: __init__.py  store.py
app/models/: api_v2.py  schemas.py
app/observability/: service.py
app/retrieval/: service.py
app/storage/: __init__.py  connection.py  migrations.py  models.py  service.py
app/storage/migrations/: 001_story_memory_v2.sql
app/storage/repositories/: __init__.py  _shared.py  memory.py  stories.py
app/tools/: services.py
app/tools_v2/: __init__.py  contracts.py
app/tools_v2/helpers/: __init__.py  chunking.py  extraction.py  text.py
app/tools_v2/memory/: __init__.py  collect_relevant_context.py
data/: demo-scenarios.json  demo-story.txt  demo-writing-session.json
docs/: demo-checklist.md  demo-requests.md  demo-runbook.md  demo-script.md  evaluation-summary.md  governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
tests/: demo_eval.py  fake_extraction.py  live_smoke.py  test_agent_v2.py  test_api.py  test_storage.py  test_tools_v2.py
(+5 files in other folders)
